--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ install:
 
 # command to run tests
 script:
-  - pytest
+  - pipenv shell
+  - python manage.py makemigrations
+  - python manage.py test apps/core/tests
