--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,6 @@ env:
 addons:
   firefox: latest
 
-before_install:
-  - wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
-  - mkdir geckodriver
-  - tar -xzf geckodriver-v0.26.0-linux64.tar.gz -C geckodriver
-  - export PATH=$PATH:$PWD/geckodriver
-
 install:
   - 'pip install pipenv'
   - 'pipenv sync'
@@ -22,6 +16,5 @@ install:
   
 # command to run tests
 script:
-  - "python manage.py makemigrations"
-  - pipenv run python manage.py runserver &
+  - python manage.py runserver &
   - "python manage.py test apps/core/tests"
