--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
 # command to run tests
 script:
   - python manage.py runserver &
-  - "python manage.py test apps/core/tests"
+  - ./manage.py test
