--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,12 +8,14 @@ crayons==0.3.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.6
+django-nose==1.4.6
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
 gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+nose==1.3.7
 psycopg2-binary==2.8.5
 pylint==2.4.4
 python-decouple==3.3
