--- a/Pipfile
+++ b/Pipfile
@@ -7,16 +7,37 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
-django = "*"
-python-decouple = "*"
-dj-database-url = "*"
-dj-static = "*"
-gunicorn = "*"
+python-decouple = "==3.3"
+dj-database-url = "==0.5.0"
+dj-static = "==0.0.6"
+gunicorn = "==20.0.4"
 psycopg2 = "*"
-freeze = "*"
-psycopg2-binary = "*"
-requests = "*"
-selenium = "*"
+freeze = "==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72"
+psycopg2-binary = "==2.8.5"
+requests = "==2.23.0"
+selenium = "==3.141.0"
+asgiref = "==3.2.7"
+astroid = "==2.3.3"
+certifi = "==2020.4.5.1"
+chardet = "==3.0.4"
+colorama = "==0.4.3"
+configparser = "==5.0.0"
+crayons = "==0.3.0"
+django-nose = "==1.4.6"
+idna = "==2.9"
+isort = "==4.3.21"
+lazy-object-proxy = "==1.4.3"
+mccabe = "==0.6.1"
+nose = "==1.3.7"
+pylint = "==2.4.4"
+pytz = "==2020.1"
+six = "==1.14.0"
+sqlparse = "==0.3.1"
+static3 = "==0.7.0"
+urllib3 = "==1.25.9"
+webdriver-manager = "==2.5.0"
+wrapt = "==1.11.2"
+Django = "==3.0.6"
 
 [requires]
 python_version = "3.8"
