--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ branches:
   only:
     - master
     - dev
+    - feature/gdrive-python
+
+before_install:
+  - openssl aes-256-cbc -K $encrypted_749dcc9e92f7_key -iv $encrypted_749dcc9e92f7_iv -in credentials-travis.json -out credentials.json -d
 
 addons:
   firefox: latest
