--- a/Pipfile
+++ b/Pipfile
@@ -62,7 +62,6 @@ oauth2client = "==4.1.3"
 oauthlib = "==3.1.0"
 pandas = "==1.0.3"
 pexpect = "==4.2.1"
-pillow = "==7.1.2"
 pipenv = "==2018.11.26"
 protobuf = "==3.12.2"
 ptyprocess = "==0.6.0"
@@ -91,6 +90,7 @@ MarkupSafe = "==1.1.1"
 PyNaCl = "==1.3.0"
 pyRFC3339 = "==1.0"
 PyYAML = "==3.12"
+Pillow = "==7.1.2"
 
 [requires]
 python_version = "3.8"
