--- a/Pipfile
+++ b/Pipfile
@@ -90,6 +90,7 @@ PyNaCl = "==1.3.0"
 pyRFC3339 = "==1.0"
 PyYAML = "==3.12"
 Pillow = "==7.1.2"
+psycopg2-binary = "==2.8.5"
 
 [requires]
 python_version = "3.8"
