--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ branches:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_749dcc9e92f7_key -iv $encrypted_749dcc9e92f7_iv -in credentials-travis.json -out credentials.json -d
+  - openssl aes-256-cbc -K $encrypted_3c84dcdc6bbe_key -iv $encrypted_3c84dcdc6bbe_iv -in .env-travis -out .env -d
+
 
 addons:
   firefox: latest
