--- a/Pipfile
+++ b/Pipfile
@@ -91,6 +91,7 @@ pyRFC3339 = "==1.0"
 PyYAML = "==5.1"
 Pillow = "==7.1.2"
 psycopg2-binary = "==2.8.5"
+unidecode = "*"
 
 [requires]
 python_version = "3.8"
