Atualização do requirements.txt e Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -91,7 +91,7 @@ pyRFC3339 = "==1.0"
 PyYAML = "==5.1"
 Pillow = "==7.1.2"
 psycopg2-binary = "==2.8.5"
-unidecode = "*"
+Unidecode = "==1.1.1"
 
 [requires]
 python_version = "3.8"
