--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 DEBUG = true
 SECRET_KEY = exemplo
+
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'meuemail@gmail.com'
+EMAIL_HOST_PASSWORD = 'minhasenha'
+EMAIL_USE_TLS = True
+DEFAULT_FROM_EMAIL = 'Equipe de olhonocorona.com <meuemail@gmail.com>'
