--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ EMAIL_HOST_USER = 'meuemail@gmail.com'
 EMAIL_HOST_PASSWORD = 'minhasenha'
 EMAIL_USE_TLS = True
 DEFAULT_FROM_EMAIL = 'Equipe de olhonocorona.com <meuemail@gmail.com>'
+
+
+IN_PRODUCTION=False
+
+DB_USER = 'your_userDB'
+DB_PASSWORD = 'your_passDB'
